[project]
name = "calitp-littlepay"
description = "Cal-ITP API implementations and admin tasks for Littlepay."
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.10"
dependencies = [
    "Authlib>=1.2.1",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
]

[project.urls]
code = "https://github.com/cal-itp/littlepay"
tracker = "https://github.com/cal-itp/littlepay"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "pre-commit",
    "setuptools_scm",
]
test = [
    "coverage",
    "pytest",
    "pytest-mock",
    "pytest-socket",
]

[project.scripts]
littlepay = "littlepay.main:main"

[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["littlepay"]

[tool.pyright]
include = ["littlepay", "tests"]
typeCheckingMode = "off"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]

[tool.setuptools]
packages = ["littlepay"]

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
